--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
         <div id="headerNav" class="flexRow">
             <div class="toggle" id="navToggle"><i class="fa fa-bars"></i></div>
             <div class="name" id="logo">
-                <p>Science Behind Fitness</p>
+                <a href="index.html">Science Behind Fitness</a>
             </div>
         </div>
         <div id="sideNav">
@@ -55,7 +55,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training3Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training3">
+                        <nav class="subMenu" id="training3">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -65,7 +65,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training4Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training4">
+                        <nav class="subMenu" id="training4">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -75,7 +75,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training5Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training5">
+                        <nav class="subMenu" id="training5">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -85,7 +85,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training6">
+                        <nav class="subMenu" id="training6">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -112,12 +112,12 @@
         </nav>
     </div>
     <main class="blogContainer" id="top">
-        <article class="blog">
+        <article class="blog borders">
             <div class="blogTitle">
                 <h1>The Article Title</h1>
             </div>
             <div class="blogImage">
-                <img src="./assets/img/Blog/burger2.jfif" alt="">
+                <img src="./assets/img/Blog/1.png" alt="">
             </div>
             <div class="blogContent">
                 <h2>Heading 1</h2>
@@ -154,7 +154,7 @@
                     <div class="card">
                         <a href="./blog.html">
                             <div class="cardImg">
-                                <img src="./assets/img/Blog/burger2.jfif" alt="">
+                                <img src="./assets/img/Blog/11.jpg" alt="">
                             </div>
                             <div class="content">
                                 <h5>The Article Title</h5>
@@ -164,7 +164,7 @@
                     <div class="card">
                         <a href="./blog.html">
                             <div class="cardImg">
-                                <img src="./assets/img/Blog/burger2.jfif" alt="">
+                                <img src="./assets/img/Blog/12.jpg" alt="">
                             </div>
                             <div class="content">
                                 <h5>The Article Title</h5>
@@ -174,7 +174,7 @@
                     <div class="card">
                         <a href="./blog.html">
                             <div class="cardImg">
-                                <img src="./assets/img/Blog/burger2.jfif" alt="">
+                                <img src="./assets/img/Blog/13.png" alt="">
                             </div>
                             <div class="content">
                                 <h5>The Article Title</h5>
@@ -184,7 +184,7 @@
                     <div class="card">
                         <a href="./blog.html">
                             <div class="cardImg">
-                                <img src="./assets/img/Blog/burger2.jfif" alt="">
+                                <img src="./assets/img/Blog/14.jpg" alt="">
                             </div>
                             <div class="content">
                                 <h5>The Article Title</h5>
@@ -200,7 +200,7 @@
                 <div class="card big">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman3.jfif" alt="">
+                            <img src="./assets/img/Blog/2.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -210,7 +210,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/3.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -220,7 +220,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/4.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -230,7 +230,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/5.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -240,7 +240,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/6.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -250,7 +250,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/7.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -260,7 +260,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/8.png" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -270,7 +270,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/9.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -280,7 +280,7 @@
                 <div class="card">
                     <a href="./blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/10.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -311,7 +311,7 @@
     </footer>
 
     <div id="goUp">
-        <a href="#banner"><i class="fa fa-angle-up"></i></a>
+        <a href="#top"><i class="fa fa-angle-up"></i></a>
     </div>
 
     <script src="./js/interaction.js"></script>
