--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
         <div id="headerNav" class="flexRow">
             <div class="toggle" id="navToggle"><i class="fa fa-bars"></i></div>
             <div class="name" id="logo">
-                <p>Science Behind Fitness</p>
+                <a href="index.html">Science Behind Fitness</a>
             </div>
         </div>
         <div id="sideNav">
@@ -54,7 +54,7 @@
                     <li>
                         <div class="name"><a href="">Nutrition</a></div>
                         <div class="toggle" id="training3Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training3">
+                        <nav class="subMenu" id="training3">
                             <ul>
                                 <li><a href="">Lose Weight</a></li>
                                 <li><a href="">Gain Weight</a></li>
@@ -64,7 +64,7 @@
                     <li>
                         <div class="name"><a href="">Nutrition</a></div>
                         <div class="toggle" id="training4Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training4">
+                        <nav class="subMenu" id="training4">
                             <ul>
                                 <li><a href="">Lose Weight</a></li>
                                 <li><a href="">Gain Weight</a></li>
@@ -74,7 +74,7 @@
                     <li>
                         <div class="name"><a href="">Nutrition</a></div>
                         <div class="toggle" id="training5Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training5">
+                        <nav class="subMenu" id="training5">
                             <ul>
                                 <li><a href="">Lose Weight</a></li>
                                 <li><a href="">Gain Weight</a></li>
@@ -84,7 +84,7 @@
                     <li>
                         <div class="name"><a href="">Nutrition</a></div>
                         <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training6">
+                        <nav class="subMenu" id="training6">
                             <ul>
                                 <li><a href="">Lose Weight</a></li>
                                 <li><a href="">Gain Weight</a></li>
@@ -112,13 +112,13 @@
     </div>
     <main>
 
-        <section class="popular" id="top">
+        <div class="popular borders" id="top">
             <h1 class="sectionTitle">Nutrition</h1>
             <div class="cardsContainer">
                 <div class="card big">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman3.jfif" alt="">
+                            <img src="./assets/img/Blog/1.png" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -128,7 +128,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/2.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/3.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -148,7 +148,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/4.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -158,7 +158,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/burger2.jfif" alt="">
+                            <img src="./assets/img/Blog/5.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -168,7 +168,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/6.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -178,7 +178,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/7.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -188,7 +188,7 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/8.png" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
@@ -198,17 +198,120 @@
                 <div class="card">
                     <a href="blog.html">
                         <div class="cardImg">
-                            <img src="./assets/img/Blog/woman2.jfif" alt="">
+                            <img src="./assets/img/Blog/9.jpg" alt="">
                         </div>
                         <div class="content">
                             <h5>The Article Title</h5>
                         </div>
                     </a>
                 </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/1.png" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/2.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/3.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/4.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/5.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/6.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/7.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/8.png" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="blog.html">
+                        <div class="cardImg">
+                            <img src="./assets/img/Blog/9.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h5>The Article Title</h5>
+                        </div>
+                    </a>
+                </div>
+
             </div>
-        </section>
+        </div>
 
     </main>
+
+    <div class="pagination">
+        <nav>
+            <ul class="flexRow">
+                <li><a href=""><i class="fas fa-chevron-left"></i></a></li>
+                <li><a href="">1</a></li>
+                <li><a href="">2</a></li>
+                <li><a href="">3</a></li>
+                <li><a href=""><i class="fas fa-chevron-right"></i></a></li>
+            </ul>
+        </nav>
+    </div>
 
     <footer id="footer">
         <nav id="quickLinks">
@@ -228,7 +331,7 @@
     </footer>
 
     <div id="goUp">
-        <a href="#banner"><i class="fa fa-angle-up"></i></a>
+        <a href="#top"><i class="fa fa-angle-up"></i></a>
     </div>
 
     <script src="./js/interaction.js"></script>
