--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="headerNav" class="flexRow">
             <div class="toggle" id="navToggle"><i class="fa fa-bars"></i></div>
             <div class="name" id="logo">
-                <p>Science Behind Fitness</p>
+                <a href="index.html">Science Behind Fitness</a>
             </div>
         </div>
         <div id="sideNav">
@@ -55,7 +55,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training3Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training3">
+                        <nav class="subMenu" id="training3">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -65,7 +65,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training4Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training4">
+                        <nav class="subMenu" id="training4">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -75,7 +75,7 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training5Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training5">
+                        <nav class="subMenu" id="training5">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -85,7 +85,27 @@
                     <li>
                         <div class="name"><a href="blogs.html">Nutrition</a></div>
                         <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
-                        <nav class="subMenu close" id="training6">
+                        <nav class="subMenu" id="training6">
+                            <ul>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
+                            </ul>
+                        </nav>
+                    </li>
+                    <li>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
+                        <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
+                        <nav class="subMenu" id="training6">
+                            <ul>
+                                <li><a href="blogs.html">Lose Weight</a></li>
+                                <li><a href="blogs.html">Gain Weight</a></li>
+                            </ul>
+                        </nav>
+                    </li>
+                    <li>
+                        <div class="name"><a href="blogs.html">Nutrition</a></div>
+                        <div class="toggle" id="training6Toggle"><i class="fa fa-angle-down"></i></div>
+                        <nav class="subMenu" id="training6">
                             <ul>
                                 <li><a href="blogs.html">Lose Weight</a></li>
                                 <li><a href="blogs.html">Gain Weight</a></li>
@@ -127,7 +147,9 @@
 
     <main>
         <section class="popular" id="top">
-            <h1 class="sectionTitle">Popular</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Popular</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card big">
                     <a href="blog.html">
@@ -223,7 +245,9 @@
         </section>
 
         <section class="subCategory">
-            <h1 class="sectionTitle">Off Beat</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Off Beat</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card">
                     <a href="blog.html">
@@ -269,7 +293,9 @@
         </section>
 
         <section class="superCategory">
-            <h1 class="sectionTitle">Nutrition</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Nutrition</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card whole">
                     <a href="blog.html">
@@ -359,7 +385,9 @@
         </section>
 
         <section class="subCategory">
-            <h1 class="sectionTitle">Off Beat</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Off Beat</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card">
                     <a href="blog.html">
@@ -405,7 +433,9 @@
         </section>
 
         <section class="superCategory">
-            <h1 class="sectionTitle">Nutrition</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Nutrition</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card whole">
                     <a href="blog.html">
@@ -485,7 +515,9 @@
         </section>
 
         <section class="subCategory">
-            <h1 class="sectionTitle">Off Beat</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Off Beat</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card">
                     <a href="blog.html">
@@ -531,7 +563,9 @@
         </section>
 
         <section class="superCategory">
-            <h1 class="sectionTitle">Nutrition</h1>
+            <a href="blogs.html">
+                <h1 class="sectionTitle">Nutrition</h1>
+            </a>
             <div class="cardsContainer">
                 <div class="card whole">
                     <a href="blog.html">
