Design Complete - Review Phase

--- a/blog.html
+++ b/blog.html
@@ -111,6 +111,7 @@
             </ul>
         </nav>
     </div>
+
     <main class="blogContainer" id="top">
         <article class="blog borders">
             <div class="blogTitle">
@@ -292,13 +293,12 @@
 
     </main>
 
-
     <footer id="footer">
         <nav id="quickLinks">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Privacy &amp; Policy</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="privacy.html">Privacy &amp; Policy</a></li>
             </ul>
         </nav>
         <div class="subscribe">
