--- a/blogs.html
+++ b/blogs.html
@@ -110,6 +110,7 @@
             </ul>
         </nav>
     </div>
+
     <main>
 
         <div class="popular borders" id="top">
@@ -304,11 +305,11 @@
     <div class="pagination">
         <nav>
             <ul class="flexRow">
-                <li><a href=""><i class="fas fa-chevron-left"></i></a></li>
-                <li><a href="">1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
-                <li><a href=""><i class="fas fa-chevron-right"></i></a></li>
+                <li><a href="blogs.html"><i class="fas fa-chevron-left"></i></a></li>
+                <li><a href="blogs.html">1</a></li>
+                <li><a href="blogs.html">2</a></li>
+                <li><a href="blogs.html">3</a></li>
+                <li><a href="blogs.html"><i class="fas fa-chevron-right"></i></a></li>
             </ul>
         </nav>
     </div>
@@ -316,9 +317,9 @@
     <footer id="footer">
         <nav id="quickLinks">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Privacy &amp; Policy</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="privacy.html">Privacy &amp; Policy</a></li>
             </ul>
         </nav>
         <div class="subscribe">
