--- a/privacy.html
+++ b/privacy.html
@@ -145,13 +145,10 @@
         </nav>
     </div>
 
-    <main class="blogContainer" id="top">
+    <main id="top">
         <article class="blog borders">
             <div class="blogTitle center">
-                <h1>About Us</h1>
-            </div>
-            <div class="blogImage">
-                <img src="./assets/img/Blog/1.png" alt="">
+                <h1>Privacy Policy</h1>
             </div>
             <div class="blogContent">
                 <h2>Heading 1</h2>
@@ -181,148 +178,6 @@
                 </p>
             </div>
         </article>
-        <aside>
-            <section class="subCategory">
-                <h1 class="sectionTitle">Off Beat</h1>
-                <div class="cardsContainer">
-                    <div class="card">
-                        <a href="./blog.html">
-                            <div class="cardImg">
-                                <img src="./assets/img/Blog/11.jpg" alt="">
-                            </div>
-                            <div class="content">
-                                <h5>The Article Title</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./blog.html">
-                            <div class="cardImg">
-                                <img src="./assets/img/Blog/12.jpg" alt="">
-                            </div>
-                            <div class="content">
-                                <h5>The Article Title</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./blog.html">
-                            <div class="cardImg">
-                                <img src="./assets/img/Blog/13.png" alt="">
-                            </div>
-                            <div class="content">
-                                <h5>The Article Title</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./blog.html">
-                            <div class="cardImg">
-                                <img src="./assets/img/Blog/14.jpg" alt="">
-                            </div>
-                            <div class="content">
-                                <h5>The Article Title</h5>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </section>
-        </aside>
-        <section class="popular">
-            <h1 class="sectionTitle">Popular</h1>
-            <div class="cardsContainer">
-                <div class="card big">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/2.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/3.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/4.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/5.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/6.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/7.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/8.png" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/9.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="./blog.html">
-                        <div class="cardImg">
-                            <img src="./assets/img/Blog/10.jpg" alt="">
-                        </div>
-                        <div class="content">
-                            <h5>The Article Title</h5>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
 
     </main>
 
