--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
     <footer id="footer">
         <nav id="quickLinks">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Privacy &amp; Policy</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="privacy.html">Privacy &amp; Policy</a></li>
             </ul>
         </nav>
         <div class="subscribe">
